--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
+    //动画效果
+    compile 'me.immortalz:transitionhelper:1.0.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
 }
