--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
         <activity android:name=".activity.location.LocActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
+        <activity android:name=".activity.ImageDetailActivity" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
